--- a/Cinema/src/index.css
+++ b/Cinema/src/index.css
@@ -27,9 +27,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
-  min-height: 100vh;
+  height: 100vh;
+ width: 100%;
   background-color: #15121E;
 }
 
@@ -41,8 +41,6 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
