--- a/Cinema/src/index.css
+++ b/Cinema/src/index.css
@@ -2,18 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body {
+  height: 100%; /* Ajouté pour s'assurer que le body prend toute la hauteur */
+
 }
 
 a {
@@ -27,9 +29,10 @@ a:hover {
 
 body {
   margin: 0;
-  height: auto;
   width: 100%;
-  background-color: #15121E;
+  padding: 0;
+  background-color: #15121f;
+
 }
 
 h1 {
@@ -61,4 +64,5 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
+
 }
