--- a/Cinema/src/styles.css
+++ b/Cinema/src/styles.css
@@ -1,31 +1,14 @@
 #app {
   height: 100%;
 }
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
 
 .swiper {
   width: 100%;
-  height: 100%;
+
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-
-
+  width: 100%;
   /* Center slide text vertically */
   display: flex;
   justify-content: center;
@@ -34,11 +17,9 @@ body {
 
 .swiper-slide img {
   display: block;
+  margin-top: 10%;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
   border-radius: 3%;
-
 }
 
 .swiper-slide {
