--- a/Cinema/src/index.css
+++ b/Cinema/src/index.css
@@ -40,6 +40,22 @@ h1 {
   line-height: 1.1;
 }
 
+.underline {
+  position: relative;
+  text-decoration: none;
+}
+
+.underline::after {
+  content: "";
+  position: absolute;
+  width: 160px;
+  left: 3px;
+  right: 0;
+  bottom: -10px; /* Ajuste cette valeur selon tes besoins */
+  height: 10px; /* Épaisseur de la ligne */
+  background-color: pink; /* Couleur pastel */
+}
+
 button {
   font-size: 1em;
   font-weight: 500;
