--- a/Cinema/src/styles.css
+++ b/Cinema/src/styles.css
@@ -2,13 +2,19 @@
   height: 100%;
 }
 
+
+
+
 .swiper {
   width: 100%;
-
+  height: 100%;
 }
 
 .swiper-slide {
-  width: 100%;
+  text-align: center;
+  font-size: 18px;
+
+
   /* Center slide text vertically */
   display: flex;
   justify-content: center;
@@ -17,19 +23,7 @@
 
 .swiper-slide img {
   display: block;
-  margin-top: 10%;
   width: 100%;
-  border-radius: 3%;
-}
-
-.swiper-slide {
-  width: 50%;
-}
-
-.swiper-slide:nth-child(2n) {
-  width: 50%;
-}
-
-.swiper-slide:nth-child(3n) {
-  width: 50%;
+  height: 100%;
+  object-fit: cover;
 }
